Aggiunto README e modificato script per avviare il programma run.sh